Prevent default on up/down arrow keys so page doesnt scroll. Update styles. Keep next/previous buttons always visible.

--- a/src/tablist/TabList.scss
+++ b/src/tablist/TabList.scss
@@ -19,6 +19,7 @@
 	// nav with tabs
 	> nav {
 		float:left;
+		padding:0 33px;
 		display: block;
 		position:relative;
 		white-space: nowrap;
@@ -28,6 +29,8 @@
 		border-right: 1px solid #666;
 		border-top: 1px solid #666;
 		height:40px;
+		width:100%;
+		background:#f9f9f9;
 
 
 		> .tablist-tab-selected {
@@ -65,7 +68,7 @@
 .tablist-tab {
 	display: inline-block;
 	margin: 0;
-	border-left: 1px solid #666;
+	border-right: 1px solid #666;
 	padding: 10px 15px;
 	cursor: pointer;
 	color: #666;
@@ -75,11 +78,7 @@
 	-ms-user-select: none;
 	user-select: none;
 	height:40px;
-	box-shadow:inset 0 -5px 0 rgba(0,0,0,0.1);
 
-	&:first-child {
-		border-left: none;
-	}
 
 	&:focus {
 		text-decoration:underline;
@@ -136,9 +135,9 @@
 			z-index:10;
 		}
 
-		> .tablist-button-hide {
-			display:none;
-		}
+		// > .tablist-button-hide {
+		// 	display:none;
+		// }
 
 		> .tablist-backward-button,
 		> .tablist-forward-button {
@@ -157,6 +156,7 @@
 
 		> .tablist-backward-button {
 			left:0;
+			box-shadow: 3px 0 1px rgba(0,0,0,0.1);
 
 			> .image {
 				-webkit-transform: rotate(180deg);
@@ -169,6 +169,7 @@
 
 		> .tablist-forward-button {
 			right:0;
+			box-shadow: -3px 0 1px rgba(0,0,0,0.1);
 	}
 }
 
